[package]
name = "easyx"
version = "0.1.1"
edition = "2024"
authors = [
    "araraloren <blackcatoverwall@gmail.com>",
]
description = "A high-level Rust wrapper for the EasyX graphics library"
repository = "https://github.com/araraloren/easyx-rs/"
keywords = ["gui", "easyx"]
license = "MIT"

[dependencies]
easyx-sys.workspace = true
libc.workspace = true
windows-sys.workspace = true
bitflags.workspace = true

[package.metadata.docs.rs]
# 为docs.rs指定只在Windows上构建
targets = ["x86_64-pc-windows-msvc"]
