[package]
name = "easyx"
version = "0.1.2"
edition = "2024"
authors = [
    "araraloren <blackcatoverwall@gmail.com>",
]
description = "A high-level Rust wrapper for the EasyX graphics library"
homepage = "https://araraloren.github.io/easyx-rs/"
documentation = "https://araraloren.github.io/easyx-rs/"
repository = "https://github.com/araraloren/easyx-rs/"
readme = "README.md"
keywords = ["gui", "easyx"]
license = "MIT"

[dependencies]
easyx-sys.workspace = true
libc.workspace = true
windows-sys.workspace = true
bitflags.workspace = true

# 禁用 docs.rs 构建，使用自己托管的文档
[package.metadata.docs.rs]
# 禁用 docs.rs 构建，使用自定义文档链接
build-dependencies = []
targets = []