[package]
name = "easyx-sys"
version = "0.1.2"
authors = [
    "araraloren <blackcatoverwall@gmail.com>",
]
description = "Raw FFI bindings to the EasyX C library"
repository = "https://github.com/araraloren/easyx-rs/"
keywords = ["gui", "easyx", "ffi"]
license = "MIT"
edition = "2024"

[lib]
name = "easyx_sys"
crate-type = ["lib"]

[dependencies]
libc.workspace = true

[build-dependencies]
cc = "1.0"
bindgen = "0.72.1"

[package.metadata.docs.rs]
# 为docs.rs指定只在Windows上构建
targets = ["x86_64-pc-windows-msvc"]
