[package]
name = "easyx-sys"
version = "0.1.3"
authors = [
    "araraloren <blackcatoverwall@gmail.com>",
]
description = "Raw FFI bindings to the EasyX C library"
homepage = "https://araraloren.github.io/easyx-rs/"
documentation = "https://araraloren.github.io/easyx-rs/"
repository = "https://github.com/araraloren/easyx-rs/"
keywords = ["gui", "easyx", "ffi"]
license = "MIT"
edition = "2024"

[lib]
name = "easyx_sys"
crate-type = ["lib"]

[dependencies]
libc.workspace = true

[build-dependencies]
cc = "1.0"
bindgen = "0.72.1"

# 禁用 docs.rs 构建，使用自己托管的文档
[package.metadata.docs.rs]
# 禁用 docs.rs 构建，使用自定义文档链接
build-dependencies = []
targets = []
